--- a/index.html
+++ b/index.html
@@ -6,20 +6,7 @@
         <div class="hero-image">
           <div class="hero-text">
             <div class="row">
-              <h1>The DSP Project</h1>
-              <p>OAUTH2 URL PARSER</p>
-              <div class="flex">
-                <button
-                  onclick="window.location.href='/'"
-                  ripple
-                  ripple-color="#5865f2"
-                >
-                  <div class="button-container">
-                    <i class="material-icons">arrow_back</i>
-                    <span class="text"> Back</span>
-                  </div>
-                </button>
-              </div>
+              <h1>AUTH2 URL PARSER</h1>
             </div>
           </div>
         </div>
