--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <div id="wrapper">
-      <div id="content">
-        <div class="hero-image">
-          <div class="hero-text">
+    <div>
+      <div>
+        <div>
+          <div>
             <div class="row">
               <h1>AUTH2 URL PARSER</h1>
             </div>
