--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body>
+  <head><meta charset="utf-8"></head><head></head><body>
     <div>
       <div>
         <div>
@@ -12,13 +12,13 @@
         </div>
         <div class="container">
           <form>
-            <br />
+            <br>
             <h4>
               Enter URL
             </h4>
-            <input id="url" class="inp" name="url" type="url" width="100%"/>
+            <input id="url" class="inp" name="url" type="url" width="100%">
             <br><br>
-            <button ripple>
+            <button ripple="">
               Parse!
             </button><br><br>
             <div style="font-weight:600;font-size:22px;">
@@ -30,8 +30,8 @@
         </div>
       </div>
     </div>
-  </body>
-</html>
+  </body></html>  
+
 
 <script>
   window.onload = () => {
