Die Antwoord Profile

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Imminent - The most spectacular coming soon template!
+            Die Antwoord Profile 
         </title><!-- Behavioral Meta Data -->
         <meta content="yes" name="apple-mobile-web-app-capable">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
-        <meta content="ThemeWagon" name="author">
-        <meta content="The most spectacular coming soon template!" name="description">
-        <meta content="Comming Soon, Responsive, Landing Page, One Page" name="keywords"><!-- Open Graph Meta Data -->
-        <meta content="The most spectacular coming soon template!">
-        <meta content="ThemeWagon">
-        <meta content="ThemeWagon">
+        <meta content="DieAntwoord" name="author">
+        <meta content="Die Antwoord Profile!" name="description">
+        <meta content="Die Antwoord Profile" name="keywords"><!-- Open Graph Meta Data -->
+        <meta content="Die Antwoord Profile!">
+        <meta content="DieAntwoord">
+        <meta content="DieAntwoord">
         <meta content="website">
         <meta content="index.html"><!-- Twitter Card Meta Data -->
         <meta content="summary" name="twitter:card">
-        <meta content="@themewagon" name="twitter:site">
-        <meta content="@themewagon" name="twitter:creator">
-        <meta content="ThemeWagon" name="twitter:title">
-        <meta content="Imminent - The most spectacular coming soon template!" name="twitter:description">
+        <meta content="@dieantwoordza" name="twitter:site">
+        <meta content="@dieantwoordza" name="twitter:creator">
+        <meta content="DieAntwoord" name="twitter:title">
+        <meta content="Die Antwoord Profile!" name="twitter:description">
 
         <link href="favicon.png" rel="shortcut icon" type="image/png">
 
@@ -48,7 +48,7 @@
         <div class="preloader">
             <div class="loading">
                 <h2>
-                    Loading...
+                    Die Antwoord Profile Loading...
                 </h2>
                 <span class="progress"></span>
             </div>
@@ -70,7 +70,7 @@
                 <li class="layer" data-depth="0.20">
                     <div class="title">
                         <h2>
-                            IMMINENT
+                            Die Antwoord
                         </h2>
                         <span class="line"></span>
                     </div>
@@ -85,11 +85,11 @@
                 <li class="layer" data-depth="0.30">
                     <div class="hero">
                         <h1 id="countdown">
-                            The most spectacular coming soon template!
+                            Die Antwoord Profile!
                         </h1>
 
                         <p class="sub-title">
-                            The most spectacular coming soon template!
+                            Die Antwoord Profile!
                         </p>
                     </div>
                 </li>
@@ -169,8 +169,8 @@
                                 <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
                             </li>
                         </ul>
-                        Theme by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
-                        <a class="mail" href="mailto:info@example.com?subject=Hi%20ThemeWagon!">info@example.com</a>
+                        Mail info <a href="https://die-antwoord.github.io/" target="_blank">die-antwoord.github.io</a>
+                        <a class="mail" href="mailto:dieantwoord1985@gmail.com?subject=Contact_Info">dieantwoord1985@gmail.com</a>
                     </div>
                 </li>
             </ul>
