--- a/index.html
+++ b/index.html
@@ -158,15 +158,15 @@
                     <div class="contact">
                         <ul class="icons">
                             <li>
-                                <a class="behance" href="#"><i class="fa fa-behance"></i></a>
+                                <a class="linktree" href="https://linktr.ee/dieantwoord"><i class="fa fa-linktree"></i></a>
                             </li>
 
                             <li>
-                                <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                                <a class="twitter" href="https://twitter.com/dieantwoordza"><i class="fa fa-twitter"></i></a>
                             </li>
 
                             <li>
-                                <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
+                                <a class="reddit" href="https://www.reddit.com/user/die_antwoord_za"><i class="fa fa-reddit"></i></a>
                             </li>
                         </ul>
                         Mail info <a href="https://die-antwoord.github.io/" target="_blank">die-antwoord.github.io</a>
