--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             </li>
                         </ul>
                         Mail info <a href="https://die-antwoord.github.io/" target="_blank">die-antwoord.github.io</a>
-                        <a class="mail" href="mailto:dieantwoord1985@gmail.com?subject=Contact_Info">dieantwoord1985@gmail.com</a>
+                        <a class="mail" href="mailto:hxh-report@gmail.com?subject=Contact_Info">hxh-report@gmail.com</a>
                     </div>
                 </li>
             </ul>
